--- a/modulo1/css-bugfixes/exercicio-bugfixes/exercicio-bugfixes/index.css
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/exercicio-bugfixes/index.css
@@ -39,6 +39,9 @@ div img {
 }
 
 .botao-amarelo {
+    position: relative;
+    right: 21%;
+    top: 10%;
     background-color: #ffaf43;
     width: 250px;
     height: 40px;
