--- a/modulo1/css-bugfixes/exercicio-bugfixes/exercicio-bugfixes/index.css
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/exercicio-bugfixes/index.css
@@ -97,13 +97,16 @@ div img {
   *
   **/
 
+
 div:nth-child(2),
 div:last-child {
     text-align: center;
+    
 }
 
 table {
-    width: 60%;
+    width: 100%;
+    text-align: center;
 }
 
 td button {
