--- a/modulo1/css-bugfixes/exercicio-bugfixes/exercicio-bugfixes/index.css
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/exercicio-bugfixes/index.css
@@ -109,6 +109,10 @@ table {
     text-align: center;
 }
 
+table img {
+    width: 60px;
+}
+
 td button {
     background-color: #fadf63;
     width: 150px;
