--- a/modulo1/css-bugfixes/exercicio-bugfixes/exercicio-bugfixes/index.css
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/exercicio-bugfixes/index.css
@@ -17,7 +17,7 @@ h2 {
 }
 
 input {
-    border-top: 1px;
+    border-top-style:20%;
     height: 20px;
     width: 500px;
 }
@@ -77,10 +77,12 @@ div>p:first-child {
     background-color: #2274a5;
     color: white;
     padding: 25px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #container-de-descricao>ol {
     padding: 15px 0px;
+    
 }
 
 #container-para-comprar {
@@ -110,6 +112,7 @@ div:last-child {
 table {
     width: 100%;
     text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 table img {
