--- a/modulo1/css-labetube/style.css
+++ b/modulo1/css-labetube/style.css
@@ -4,9 +4,6 @@
     box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-body{
-    
-}
 
 main{
     display: grid;
@@ -71,9 +68,10 @@ footer{
 footer > p{
     padding-top: 32px;
     font-family: sans-serif;
-    font-size: 40px;
+    font-size: 30px;
     margin-left: 10px;
     font-weight: bold;
+    text-align: center;
 }
 
 /*--------------------videos-----------------*/
@@ -103,19 +101,20 @@ h4 p {
     #buscar{
         width: 20vw;
     }
+
     footer{
-        height: 5vh;
-        background-color: black;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        height: 4vh;
+        width: 100vw;
     }
-    footer p {
-       
-        font-size:16px;
+    
+    footer > p{
+        padding-top: 10px;
+        font-family: sans-serif;
+        font-size: 15px;
+        margin-left: 10px;
+        font-weight: bold;
         text-align: center;
-        
-        
+       
     }
 
 
