Tags alt para melhor acessibilidade

--- a/modulo1/css-labetube/style.css
+++ b/modulo1/css-labetube/style.css
@@ -116,6 +116,13 @@ h4 p {
         text-align: center;
        
     }
+    .video-aleatorio{
+        width: 60vw;
+        height: 40vh;
+        margin-left:90px;
+        
+
+    }
 
 
     
