--- a/modulo2/jsx-labetube/src/App.css
+++ b/modulo2/jsx-labetube/src/App.css
@@ -95,7 +95,7 @@ main {
   justify-items: stretch;
 }
 
-
+/*
 footer {
   height: 10%;
   background-color: grey;
@@ -104,6 +104,8 @@ footer {
   display: flex;
   align-items: center;
 }
+
+*/
 
 .box-pagina-principal > img {
   width: 100%;
